added github URL

--- a/style.css
+++ b/style.css
@@ -6,4 +6,5 @@
  Template:     Colleges-Theme
  Version:      1.0.0
  Text Domain:  Colleges-Theme-child
+ GitHub Theme URI: https://github.com/UCF/CHPS-Child-Theme
 */
