--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
  Theme Name:   Colleges Theme Child
  Description:  David Janosik's theme based on UCFs Colleges-Theme
- Author:       David Janosik
+ Author:       David C. Janosik
  Author URI:   http://davidjanosik.com
  Template:     Colleges-Theme
  Version:      1.0.0
