--- a/css/custom.css
+++ b/css/custom.css
@@ -305,5 +305,12 @@ span.searchresults	{
 @media (max-width: 991px) {
 	.extraprofile, .profilesidebar {
 		display: none;
-	}		
+	}	
+	.mainHomeTitle .evc-st-title {
+    	font-size: 2.5rem !important;
+	}
+	.mainHomeSubtitle .evc-st-title {
+		line-height: 1rem !important;
+	}
+
 }	
