--- a/css/custom.css
+++ b/css/custom.css
@@ -308,10 +308,10 @@ span.searchresults	{
 	}	
 	.mainHomeTitle .evc-st-title {
     	font-size: 1.8rem !important;
-		line-height: 1.1rem !important;
+		line-height: 1.2rem !important;
 	}
 	.mainHomeSubtitle .evc-st-title {
-		font-size: .8rem !important;
+		font-size: 1.1rem !important;
 		line-height: 1.1rem !important;
 	}
 
