--- a/css/custom.css
+++ b/css/custom.css
@@ -355,7 +355,7 @@ span.searchresults	{
 @supports (-ms-ime-align: auto) {
    /* Microsoft EdgeV13&14 CSS styles go here */
 	  .media-background, .media-background-container>picture {
-		height: calc(100% + 1px);
+		height: 100% !important;
 		left: 0;
 		position: absolute;
 		top: 0;
