--- a/css/custom.css
+++ b/css/custom.css
@@ -355,11 +355,11 @@ span.searchresults	{
 @supports (-ms-ime-align: auto) {
    /* Microsoft EdgeV13&14 CSS styles go here */
 	  .media-background, .media-background-container>picture {
-		height: 100% !important;
-		left: 0;
+		width: 100% !important;
+		height: calc(auto + 1px) !important;
+		/* left: 0;
 		position: absolute;
 		top: 0;
-		width: 100% !important;
-		z-index: -1;
+		z-index: -1; */
 	}
 }
