--- a/css/custom.css
+++ b/css/custom.css
@@ -356,7 +356,7 @@ span.searchresults	{
    /* Microsoft EdgeV13&14 CSS styles go here */
 	  .media-background, .media-background-container>picture {
 		width: 100% !important;
-		height: calc(auto + 1px) !important;
+		height: auto !important;
 		/* left: 0;
 		position: absolute;
 		top: 0;
