--- a/css/custom.css
+++ b/css/custom.css
@@ -355,9 +355,14 @@ span.searchresults	{
 @supports (-ms-ime-align: auto) {
    /* Microsoft EdgeV13&14 CSS styles go here */
 	  .media-background, .media-background-container>picture {
-		height: 120% !important;
+		  height: calc(100% + 1px);
+   	 width: calc(100% + 1px);
+		
+		overflow: auto !important;
+		/* 
+		  height: 120% !important;
 		width: auto !important;
-		/* left: 0;
+		  left: 0;
 		position: absolute;
 		top: 0;
 		z-index: -1; */
