--- a/css/custom.css
+++ b/css/custom.css
@@ -355,10 +355,10 @@ span.searchresults	{
 @supports (-ms-ime-align: auto) {
    /* Microsoft EdgeV13&14 CSS styles go here */
 	  .media-background, .media-background-container>picture {
+		  width: calc(100% + 1px);
+		  height: auto;
 		  height: calc(100% + 1px);
-   	 width: calc(100% + 1px);
-		
-		overflow: auto !important;
+   	 	  
 		/* 
 		  height: 120% !important;
 		width: auto !important;
