--- a/css/custom.css
+++ b/css/custom.css
@@ -355,7 +355,7 @@ span.searchresults	{
 @supports (-ms-ime-align: auto) {
    /* Microsoft EdgeV13&14 CSS styles go here */
 	  .media-background, .media-background-container>picture {
-		  width: calc(130% + 1px);
+		  width: 130% !important;
 		  height: auto !important;
 		  top: -9999px !important;
     	bottom: -9999px !important;
