--- a/css/custom.css
+++ b/css/custom.css
@@ -71,7 +71,7 @@ Yellow Hover Color:           #cca12e;
     background-color: rgba(255,204,0,.95);
     font-family: "Archer A","Archer B","UCF Slab Serif Alt",serif !important;
     font-weight: 400 !important;
-    font-size: 48px !important;
+    font-size: 55px;
     line-height: 1;
     margin-bottom: 0;
     padding: 1.1rem 1.5rem;
