--- a/css/custom.css
+++ b/css/custom.css
@@ -200,8 +200,58 @@ span.searchresults	{
 	font-size:14px;
 	line-height: 16px;
 }
-
-
+/* = SINGLE NEWS STORY POST 
+-------------------------------------------------------------- */
+.cattitle-single {
+	color: #999;
+	font-size: 16px;
+	font-weight: 700;
+	letter-spacing: .5;
+	margin-bottom: 12px;
+	text-transform: uppercase;
+}
+.cattitle-single:hover {
+	color: #fdc831;
+}
+.authortext {
+	text-transform: uppercase;
+	font-size: 12px;
+	color: #777;
+	margin-top: 20px;
+}
+#postIMG {
+	margin-bottom: 20px;
+}
+#imgRight {
+	max-width: 480px;
+	float: right;
+	margin: 0px 0px 20px 20px;
+}
+#imgLeft {
+	max-width: 480px;
+	float: left;
+	margin: 0px 20px 20px 0px;
+}	
+.recborder {
+	border-right: solid 2px #eee;
+}
+.postmission {
+	font-size:14px;
+	line-height: 16px;
+}
+figure.alignleft {
+    margin-right: 20px;
+}
+figure.alignright {
+    margin-left: 20px;
+}
+figcaption, .featcaption {
+    font-size: 12px;
+    color: #888;
+    font-style:italic;
+    font-weight:300;
+	margin-top:12px;
+}
 
 /* = Profile Directory Results, list items 
 -------------------------------------------------------------- */
