--- a/css/custom.css
+++ b/css/custom.css
@@ -5,7 +5,11 @@ Yellow Hover Color:           #cca12e;
 -------------------------------------------------------------- */
 
 
-
+/* = Generic Fixes
+-------------------------------------------------------------- */
+h2 {
+    text-transform: none !important;
+}
 
 /* = USED GLOBALLY 
 -------------------------------------------------------------- */
