--- a/css/custom.css
+++ b/css/custom.css
@@ -305,7 +305,24 @@ figcaption, .featcaption {
 .profile-social-icon {
 	color: #fff !important;
 }
-
+a.fb-socialicon {
+	color:#3b5998;
+}
+a.tw-socialicon {
+	color: #1da1f2;
+}
+a.yt-socialicon {
+	color: #ff0000;
+}
+a.ig-socialicon {
+	color: #e4405f;
+}
+a.in-socialicon {
+	color: #007bb5;
+}
+a.fb-socialicon:hover, a.tw-socialicon:hover, a.yt-socialicon:hover, a.ig-socialicon:hover, a.in-socialicon:hover {
+	color:#fc0;
+}
 
 /* = Widgets
 -------------------------------------------------------------- */
