--- a/css/custom.css
+++ b/css/custom.css
@@ -14,7 +14,7 @@ h2 {
 /* = USED GLOBALLY 
 -------------------------------------------------------------- */
 .icongrey {
-	color:#999 ;
+	color:#bbb ;
 }
 .iconyellow {
 	color:#fecb2f ;
