--- a/css/custom.css
+++ b/css/custom.css
@@ -190,6 +190,7 @@ span.searchresults	{
 }
 #researchIntList li{
 	list-style: none;
+	font-size: 20px;
 }
 
 /* = NEWS Posts, BLOG, shortcode news results 
