--- a/css/custom.css
+++ b/css/custom.css
@@ -196,8 +196,8 @@ span.searchresults	{
 	
 }
 directoryDegrees {
-	font-weight:200;
-	font-size:18px;
+	font-weight:200 !important;
+	font-size:18px !important;
 }
 /* = NEWS Posts, BLOG, shortcode news results 
 -------------------------------------------------------------- */
