--- a/css/custom.css
+++ b/css/custom.css
@@ -195,9 +195,9 @@ span.searchresults	{
 	margin-bottom: 5px;
 	
 }
-directoryDegrees {
-	font-weight:200 !important;
-	font-size:18px !important;
+.directoryDegrees {
+	font-weight:200;
+	font-size:18px;
 }
 /* = NEWS Posts, BLOG, shortcode news results 
 -------------------------------------------------------------- */
