--- a/css/custom.css
+++ b/css/custom.css
@@ -193,6 +193,7 @@ span.searchresults	{
 	list-style: none;
 	font-size: 15px;
 	margin-bottom: 5px;
+	text-transform:capitalize;
 	
 }
 .directoryDegrees {
