--- a/css/custom.css
+++ b/css/custom.css
@@ -336,6 +336,9 @@ a.ig-socialicon {
 a.in-socialicon {
 	color: #007bb5;
 }
+a.in-socialicon {
+	color: #ff0084;
+}
 a.fb-socialicon:hover, a.tw-socialicon:hover, a.yt-socialicon:hover, a.ig-socialicon:hover, a.in-socialicon:hover {
 	color:#fc0;
 }
