--- a/css/custom.css
+++ b/css/custom.css
@@ -336,7 +336,7 @@ a.ig-socialicon {
 a.in-socialicon {
 	color: #007bb5;
 }
-a.in-socialicon {
+a.fk-socialicon {
 	color: #ff0084;
 }
 a.fb-socialicon:hover, a.tw-socialicon:hover, a.yt-socialicon:hover, a.ig-socialicon:hover, a.in-socialicon:hover {
