--- a/css/custom.css
+++ b/css/custom.css
@@ -331,7 +331,7 @@ a.yt-socialicon {
 	color: #ff0000;
 }
 a.ig-socialicon {
-	color: #e4405f;
+	color: #bc2a8d;
 }
 a.in-socialicon {
 	color: #007bb5;
