--- a/css/custom.css
+++ b/css/custom.css
@@ -339,7 +339,7 @@ a.in-socialicon {
 a.fk-socialicon {
 	color: #ff0084;
 }
-a.fb-socialicon:hover, a.tw-socialicon:hover, a.yt-socialicon:hover, a.ig-socialicon:hover, a.in-socialicon:hover, a.fk-socialicon:hover {
+#minisocial a:hover {
 	color:#fc0;
 }
 
