--- a/css/custom.css
+++ b/css/custom.css
@@ -321,6 +321,9 @@ figcaption, .featcaption {
 .profile-social-icon {
 	color: #fff !important;
 }
+
+/* = SOCIAL MEDIA ICONS
+-------------------------------------------------------------- */
 a.fb-socialicon {
 	color:#3b5998;
 }
