--- a/css/custom.css
+++ b/css/custom.css
@@ -79,7 +79,14 @@ h2 {
     height:0px !important;
     overflow: hidden !important;
 }
-
+.parallax-wrapper {
+    position: relative;
+}
+.parallax-container {
+    width: 100vw;
+    margin-left: calc(-50vw + 50% - 8px);
+    position: relative;
+}
 
 /* = Homepage Title
 -------------------------------------------------------------- */
@@ -247,16 +254,16 @@ span.searchresults	{
 .lBorder {
 	border-left: solid 2px #eee;
 }
-.parallax-wrapper {
-    position: relative;
-}
-.parallax-container {
-    background-color: #0f0;
-    width: 100vw;
-    margin-left: calc(-50vw + 50% - 8px);
-    position: relative;
+
+/* = Websupport Website 
+-------------------------------------------------------------- */
+.disclaimerText {
+    color:#aaa;
+    font-size:13px;
     text-align:center;
+	background: #f2f2f2;
 }
+
 /* = SINGLE NEWS STORY POST 
 -------------------------------------------------------------- */
 .cattitle-single {
