--- a/css/custom.css
+++ b/css/custom.css
@@ -254,6 +254,7 @@ span.searchresults	{
     font-size:13px;
     text-align:center;
 	background: #f2f2f2;
+	padding-top:35px;
 }
 
 /* = SINGLE NEWS STORY POST 
