--- a/css/custom.css
+++ b/css/custom.css
@@ -291,6 +291,16 @@ span.searchresults	{
 	max-width: 440px;
 	float: left;
 	margin: 0px 20px 20px 0px;
+}
+#imgRight-small {
+	max-width: 220px;
+	float: right;
+	margin: 0px 0px 20px 20px;
+}
+#imgLeft-small {
+	max-width: 220px;
+	float: left;
+	margin: 0px 20px 20px 0px;
 }	
 .recborder {
 	border-right: solid 2px #eee;
