--- a/css/custom.css
+++ b/css/custom.css
@@ -230,6 +230,31 @@ span.searchresults	{
 	font-size:14px;
 	line-height: 16px;
 }
+.visnews-photo {
+    height: 200px;
+}
+@media screen and (max-width: 992px) {
+	.visnews-photo {
+		width: 100%;
+		height:225px;
+	}
+}	
+.newsmedia .visnews {
+  height: 100%;
+  padding: 0px; 
+  color: #000;
+  border: solid 1px #ddd;
+  line-height:17px;
+  font-size: 15px !important;
+  font-weight:500;
+}
+.newsmedia .visnews:hover {
+  background: #eee;
+}	
+.newsmedia .col-xs-12 a {
+    color:#000;
+    text-decoration:none !important;
+}
 /* = RECENT LIST TEXT SHORTCODE 
 -------------------------------------------------------------- */
 .recentlist li {
