--- a/css/custom.css
+++ b/css/custom.css
@@ -255,6 +255,21 @@ span.searchresults	{
     color:#000;
     text-decoration:none !important;
 }
+
+
+
+
+.newsmedia .narrow-gutter [class*='col-'] {
+  padding-right:6px;
+  padding-left:6px;
+}
+.newsmedia .newsdate {
+    margin-top:15px;
+    display:block;
+    font-weight:normal;
+    color: #aaa;
+    font-style: italic;
+}
 /* = RECENT LIST TEXT SHORTCODE 
 -------------------------------------------------------------- */
 .recentlist li {
