--- a/css/custom.css
+++ b/css/custom.css
@@ -11,7 +11,6 @@ Light Gray:                   #f2f2f2;
 h2 {
     text-transform: none !important;
 }
-
 /* = USED GLOBALLY 
 -------------------------------------------------------------- */
 .icongrey {
@@ -79,7 +78,6 @@ h2 {
     height:0px !important;
     overflow: hidden !important;
 }
-
 /* = Homepage Title
 -------------------------------------------------------------- */
 .mainHomeTitle .evc-st-title {
@@ -101,7 +99,24 @@ h2 {
     text-transform:none !important;
     padding: 1.1rem 1.5rem;
 }
-
+/* = NAVIGATION
+-------------------------------------------------------------- */
+.breadcrumb {
+	height:25px;
+	background:#2f2f2f;
+	color: #929292;
+	font-size:11px;
+	padding-top:5px;
+}
+.breadcrumb a{
+	color: #929292;
+}
+.breadcrumb a.yellow{
+	color: #fecb2f;
+}
+.breadcrumb a:hover{
+	color: #fff;
+}
 /* = Profile Directory Search Bar
 -------------------------------------------------------------- */
 .searchbar {
@@ -168,7 +183,6 @@ h2 {
     font-style: italic !important;
     padding-top:14px !important;
 }
-
 /* = Custom Post Type Results, list items 
 -------------------------------------------------------------- */
 .cat-border {
@@ -287,7 +301,6 @@ span.searchresults	{
 .lBorder {
 	border-left: solid 2px #eee;
 }
-
 /* = Websupport Website 
 -------------------------------------------------------------- */
 .disclaimerText {
@@ -363,7 +376,6 @@ figcaption, .featcaption {
     font-weight:300;
 	margin-top:12px;
 }
-
 /* = Profile Directory Results, list items 
 -------------------------------------------------------------- */
 .profilejobtitle {
@@ -380,7 +392,6 @@ figcaption, .featcaption {
 .personlist-ht {
 	min-height: 190px; 
 }	
-
 /* = Profile Directory Single Person
 -------------------------------------------------------------- */
 .profile-social-web {
@@ -401,7 +412,6 @@ figcaption, .featcaption {
 .profile-social-icon {
 	color: #fff !important;
 }
-
 /* = SOCIAL MEDIA ICONS
 -------------------------------------------------------------- */
 a.fb-socialicon {
@@ -425,7 +435,6 @@ a.fk-socialicon {
 #minisocial a:hover {
 	color:#fc0;
 }
-
 /* = Widgets
 -------------------------------------------------------------- */
 .widgetFix {
@@ -441,8 +450,6 @@ a.fk-socialicon {
 	padding:6px 0px;
 	font-size: 14px !important;
 }
-
-
 /* = UCF EVENTS
 -------------------------------------------------------------- */
 .ucf-events-modern .ucf-event-when, .ucf-events-classic .ucf-event-when {
@@ -480,8 +487,6 @@ a.fk-socialicon {
     font-weight: 700;
     line-height: 1;
 }
-
-
 /* = PAGINATION STYLE, paging
 -------------------------------------------------------------- */
 .navigation li a,
@@ -508,8 +513,6 @@ a.fk-socialicon {
 .navigation li.active a {
     background-color: #3C8DC5;
 }	
-
-
 /* = MAKE THINGS DISAPPEAR ON MOBILE
 -------------------------------------------------------------- */
 @media (max-width: 500px) {
@@ -529,7 +532,6 @@ a.fk-socialicon {
 		font-size: 1.2rem !important;
 		line-height: 1.1rem !important;
 	}
-
 }	
 @media (max-width: 1200px) and (min-width: 768px)  {
     .lookingfor .evc-st-title {
@@ -539,10 +541,8 @@ a.fk-socialicon {
 		padding-top:20px !important;
     }
 }
-
 /* = STUPID MICROSOFT EDGE BROWSER
 -------------------------------------------------------------- */
-
 @supports (-ms-ime-align: auto) {
    /* Microsoft EdgeV13&14 CSS styles go here */
 	  .media-background, .media-background-container>picture {
