--- a/css/custom.css
+++ b/css/custom.css
@@ -101,20 +101,19 @@ h2 {
 }
 /* = NAVIGATION
 -------------------------------------------------------------- */
-.breadcrumb {
-	height:25px;
+.breadcrumbnav {
 	background: #2f2f2f;
 	color: #929292;
 	font-size:11px;
 	padding-top:5px;
 }
-.breadcrumb a{
+.breadcrumbnav a{
 	color: #929292;
 }
-.breadcrumb a.yellow{
+.breadcrumbnav a.yellow{
 	color: #fecb2f;
 }
-.breadcrumb a:hover{
+.breadcrumbnav a:hover{
 	color: #fff;
 }
 /* = Profile Directory Search Bar
