--- a/css/custom.css
+++ b/css/custom.css
@@ -105,7 +105,7 @@ h2 {
 	background: #2f2f2f;
 	color: #929292;
 	font-size:11px;
-	padding-top:5px;
+	padding:8px 0px;
 }
 .breadcrumbnav a{
 	color: #929292;
