--- a/css/custom.css
+++ b/css/custom.css
@@ -191,7 +191,7 @@ h2 {
 	text-transform: none !important;
 }
 .catlist-photo {
-    width: 355px;
+    width: 55px;
 }
 span.searchresults	{
 	padding-left:10px;
@@ -297,6 +297,23 @@ span.searchresults	{
 .newsmedia .exInfo:hover {
   background: #eee;
 }
+article blockquote {
+    border-bottom: 1px solid #000;
+    border-left: 0;
+    border-top: 10px solid #000;
+    clear: both;
+    float: left;
+    margin: 5px 30px 20px -40px;
+    padding-left: 0;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    width: 40%;
+}
+article blockquote p {
+  font-size: 20px;
+    font-weight: 400;
+    line-height: 1.4;
+}    
 /* = RECENT LIST TEXT SHORTCODE 
 -------------------------------------------------------------- */
 .recentlist li {
