--- a/css/custom.css
+++ b/css/custom.css
@@ -84,6 +84,12 @@ h2 {
     height:0px !important;
     overflow: hidden !important;
 }
+img .alignleft {
+	margin: 0px 20px 20px 0px;
+}
+img .alignright {
+	margin: 0px 0px 20px 20px;
+}
 /* = Homepage Title
 -------------------------------------------------------------- */
 .mainHomeTitle .evc-st-title {
