--- a/css/custom.css
+++ b/css/custom.css
@@ -115,7 +115,7 @@ h2 {
 -------------------------------------------------------------- */
 .unit-blocks a {
     display: flex;
-    text-decoration:none !important;
+    text-decoration:none;
     color: #FFF !important;
     padding:20px;
     -webkit-box-flex: 0;
@@ -123,7 +123,6 @@ h2 {
     flex: 0 0 16.66666%;
     max-width: 16.66666%;
     min-height: 16.66666vw;
-	cursor: pointer !important;
 }
 .unit-blocks a:hover {
     text-decoration:none !important;
