--- a/css/custom.css
+++ b/css/custom.css
@@ -305,6 +305,9 @@ span.searchresults	{
 }
 /* = NEWS Posts, BLOG, shortcode news results 
 -------------------------------------------------------------- */
+#storyPost h2 {
+	font-size: 10px;
+}
 .spotlight-vertical .spotlight-header {
     font-style:normal !important;
 }
