--- a/css/custom.css
+++ b/css/custom.css
@@ -401,8 +401,9 @@ article blockquote p {
     font-weight: 400;
     line-height: 1.4;
 }   
-#storyPost h2 {
+article h2 {
 	font-size: 10px !important;
+	color: red;
 }
 /* = RECENT LIST TEXT SHORTCODE 
 -------------------------------------------------------------- */
