--- a/css/custom.css
+++ b/css/custom.css
@@ -303,6 +303,11 @@ span.searchresults	{
 	font-weight:300 !important;
 	font-size:18px !important;
 }
+#exLinkIcon { 
+  background-image: url('https://healthprofessions.ucf.edu/wp-content/uploads/sites/2/2019/10/exLinkIconGrey.png');
+  background-repeat: no-repeat;
+  background-position: top right; 
+}
 /* = NEWS Posts, BLOG, shortcode news results 
 -------------------------------------------------------------- */
 .spotlight-vertical .spotlight-header {
