--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,5 @@
 
-/* =Theme customization starts here
+/* =Theme customization starts here Hello
 Yellow Color:                 #fecb2f;
 Yellow Hover Color:           #cca12e;
 Light Gray:                   #f2f2f2;
