--- a/css/custom.css
+++ b/css/custom.css
@@ -197,6 +197,7 @@ h2 {
 }
 .fts-jal-single-fb-post {
     border: 1px solid #ccc !important;
+	margin-bottom: 30px !important;
 }
 .fts-mashup-media-top .fts-likes-shares-etc-wrap {
     border-top: 1px solid #ccc !important;
