--- a/css/custom.css
+++ b/css/custom.css
@@ -3,6 +3,7 @@
 Yellow Color:                 #fecb2f;
 Yellow Hover Color:           #cca12e;
 Light Gray:                   #f2f2f2;
+Light Yellow:                 #fff5dc;
 -------------------------------------------------------------- */
 
 
