--- a/css/custom.css
+++ b/css/custom.css
@@ -583,6 +583,10 @@ figcaption, .featcaption {
 	display: block;
 	width: 100%;
 }
+.personResearchList {
+	list-style: none;
+	padding-left: 10px;
+}
 /* = Profile Directory Single Person
 -------------------------------------------------------------- */
 .profile-social-web {
