--- a/css/custom.css
+++ b/css/custom.css
@@ -20,6 +20,9 @@ h2 {
 .iconyellow {
 	color:#fecb2f ;
 }
+.icongreen {
+	color:#009900 ;
+}
 .largeGreyLink {
     text-align:right;
     padding-bottom:0px;
