--- a/css/custom.css
+++ b/css/custom.css
@@ -734,6 +734,10 @@ a.fk-socialicon {
 		font-size: 1.2rem !important;
 		line-height: 1.1rem !important;
 	}
+	#imgRight-medium {
+		width: 100%;
+		margin: 0px 0px 20px 20px;
+	}
 }	
 @media (max-width: 1200px) and (min-width: 768px)  {
     .lookingfor .evc-st-title {
