--- a/css/custom.css
+++ b/css/custom.css
@@ -735,7 +735,7 @@ a.fk-socialicon {
 		line-height: 1.1rem !important;
 	}
 	#imgRight-medium {
-		width: 100% !important;
+		max-width: 100% !important;
 		margin: 0px 0px 20px 0px !important;
 	}
 }	
