--- a/css/custom.css
+++ b/css/custom.css
@@ -445,7 +445,7 @@ span.searchresults	{
     font-style: italic;
 }
 .newsdate-blog {
-    margin-top:5px;
+    margin-bottom:8px;
     display:block;
     font-weight:normal;
     color: #777;
