--- a/css/custom.css
+++ b/css/custom.css
@@ -614,6 +614,9 @@ ul.personResearchList {
 .profile-social-yt {
 	color: #ff0000;
 }
+.profile-social-ig {
+	color: #bc2a8d;
+}
 .profile-social-lk {
 	color: #007bb5;
 }
