--- a/css/custom.css
+++ b/css/custom.css
@@ -522,6 +522,7 @@ article blockquote p {
 	background-color:#ffcc00;
 	font-size:12px;
 	padding:3px 8px;
+	margin-right:20px;
 }
 .grant-money {
 	color:#999999;
